--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,8 @@
 == README
+# Tutoriel Ruby on Rails : Application Exemple
+
+C'est l'Application Exemple pour mon apprentissage.
+
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
